--- a/Snake Projekt.csproj
+++ b/Snake Projekt.csproj
@@ -45,7 +45,11 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Body.cs" />
+    <Compile Include="Collider.cs" />
+    <Compile Include="Controller.cs" />
+    <Compile Include="PlayField.cs" />
+    <Compile Include="Renderer.cs" />
+    <Compile Include="SnakeBody.cs" />
     <Compile Include="Food.cs" />
     <Compile Include="Form1.cs">
       <SubType>Form</SubType>
@@ -53,13 +57,14 @@
     <Compile Include="Form1.Designer.cs">
       <DependentUpon>Form1.cs</DependentUpon>
     </Compile>
-    <Compile Include="HelloWorld.cs" />
-    <Compile Include="Hey.cs" />
     <Compile Include="IDrawable.cs" />
     <Compile Include="Player.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Snake.cs" />
+    <Compile Include="SpeedyFood.cs" />
+    <Compile Include="StandardFood.cs" />
+    <Compile Include="ValuableFood.cs" />
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
