--- a/Snake Projekt.csproj
+++ b/Snake Projekt.csproj
@@ -45,7 +45,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Body.cs" />
+    <Compile Include="SnakeBody.cs" />
     <Compile Include="Food.cs" />
     <Compile Include="Form1.cs">
       <SubType>Form</SubType>
