--- a/Snake Projekt.csproj
+++ b/Snake Projekt.csproj
@@ -57,6 +57,7 @@
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Snake.cs" />
+    <Compile Include="SnakeBody.cs" />
     <Compile Include="SpeedyFood.cs" />
     <Compile Include="StandardFood.cs" />
     <Compile Include="ValuableFood.cs" />
