--- a/Snake Projekt.csproj
+++ b/Snake Projekt.csproj
@@ -48,11 +48,11 @@
     <Compile Include="Collider.cs" />
     <Compile Include="Controller.cs" />
     <Compile Include="Food.cs" />
-    <Compile Include="MainForm.cs">
+    <Compile Include="Form1.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="MainForm.Designer.cs">
-      <DependentUpon>MainForm.cs</DependentUpon>
+    <Compile Include="Form1.Designer.cs">
+      <DependentUpon>Form1.cs</DependentUpon>
     </Compile>
     <Compile Include="IDrawable.cs" />
     <Compile Include="Player.cs" />
