--- a/Snake Projekt.csproj
+++ b/Snake Projekt.csproj
@@ -48,6 +48,7 @@
     <Compile Include="Collider.cs" />
     <Compile Include="Controller.cs" />
     <Compile Include="Food.cs" />
+    <Compile Include="ICollideble.cs" />
     <Compile Include="MainForm.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -55,7 +56,6 @@
       <DependentUpon>MainForm.cs</DependentUpon>
     </Compile>
     <Compile Include="IDrawable.cs" />
-    <Compile Include="Player.cs" />
     <Compile Include="PlayField.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
