--- a/Snake Projekt.csproj
+++ b/Snake Projekt.csproj
@@ -47,6 +47,7 @@
   <ItemGroup>
     <Compile Include="Collider.cs" />
     <Compile Include="Controller.cs" />
+    <Compile Include="CoordinateConverter.cs" />
     <Compile Include="Food.cs" />
     <Compile Include="ICollideble.cs" />
     <Compile Include="MainForm.cs">
