--- a/Snake Projekt.csproj
+++ b/Snake Projekt.csproj
@@ -67,6 +67,9 @@
     <Compile Include="SpeedyFood.cs" />
     <Compile Include="StandardFood.cs" />
     <Compile Include="ValuableFood.cs" />
+    <EmbeddedResource Include="MainForm.resx">
+      <DependentUpon>MainForm.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
