--- a/Snake Projekt.csproj
+++ b/Snake Projekt.csproj
@@ -64,6 +64,12 @@
     <Compile Include="Renderer.cs" />
     <Compile Include="Snake.cs" />
     <Compile Include="SnakeBody.cs" />
+    <Compile Include="TheGrandMenu.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="TheGrandMenu.Designer.cs">
+      <DependentUpon>TheGrandMenu.cs</DependentUpon>
+    </Compile>
     <Compile Include="Trigger.cs" />
     <EmbeddedResource Include="MainForm.resx">
       <DependentUpon>MainForm.cs</DependentUpon>
@@ -76,7 +82,11 @@
     <Compile Include="Properties\Resources.Designer.cs">
       <AutoGen>True</AutoGen>
       <DependentUpon>Resources.resx</DependentUpon>
+      <DesignTime>True</DesignTime>
     </Compile>
+    <EmbeddedResource Include="TheGrandMenu.resx">
+      <DependentUpon>TheGrandMenu.cs</DependentUpon>
+    </EmbeddedResource>
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
@@ -89,6 +99,9 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="ElSnakeo.jpg" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
