--- a/Snake Projekt.csproj
+++ b/Snake Projekt.csproj
@@ -65,6 +65,7 @@
     <Compile Include="Renderer.cs" />
     <Compile Include="Snake.cs" />
     <Compile Include="SnakeBody.cs" />
+    <Compile Include="SnakeFactory.cs" />
     <Compile Include="Trigger.cs" />
     <EmbeddedResource Include="MainForm.resx">
       <DependentUpon>MainForm.cs</DependentUpon>
