--- a/Snake Projekt.csproj
+++ b/Snake Projekt.csproj
@@ -66,6 +66,12 @@
     <Compile Include="Snake.cs" />
     <Compile Include="SnakeBody.cs" />
     <Compile Include="SnakeFactory.cs" />
+    <Compile Include="TheGrandMenu.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="TheGrandMenu.Designer.cs">
+      <DependentUpon>TheGrandMenu.cs</DependentUpon>
+    </Compile>
     <Compile Include="Trigger.cs" />
     <EmbeddedResource Include="MainForm.resx">
       <DependentUpon>MainForm.cs</DependentUpon>
