--- a/Snake Projekt.csproj
+++ b/Snake Projekt.csproj
@@ -113,12 +113,12 @@
     <None Include="ElSnakeo.jpg" />
   </ItemGroup>
   <ItemGroup>
-    <Content Include="Player1Image.png" />
-    <Content Include="Player2Image.png" />
-    <Content Include="Player3Image.png" />
-    <Content Include="SpeedUpImage.png" />
-    <Content Include="StandardFoodImage.png" />
-    <Content Include="ValueableFoodImage.png" />
+    <Content Include="Images\Player1Image.png" />
+    <Content Include="Images\Player2Image.png" />
+    <Content Include="Images\Player3Image.png" />
+    <Content Include="Images\SpeedUpImage.png" />
+    <Content Include="Images\StandardFoodImage.png" />
+    <Content Include="Images\ValueableFoodImage.png" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
