The high score is now updating correctly and reading from a existing file.

--- a/Snake Projekt.csproj
+++ b/Snake Projekt.csproj
@@ -124,6 +124,7 @@
     <None Include="ElSnakeo.jpg" />
   </ItemGroup>
   <ItemGroup>
+    <Content Include="Highscore.txt" />
     <Content Include="Images\Player1Image.png" />
     <Content Include="Images\Player2Image.png" />
     <Content Include="Images\Player3Image.png" />
